# bevy_sqlx

./: .env  Cargo.toml  README.md  test.sh
.github/workflows/: rust.yml
db/: sqlite.db
examples/: minimal.rs  postgres.rs  sqlite.rs  stress.rs
examples/postgres/: minimal.rs  sync.rs
examples/sqlite/: debug.rs  headless.rs  minimal.rs  resource.rs  return.rs  spawn.rs  stress.rs  sync.rs
migrations/: 20240914202544_example.down.sql  20240914202544_example.sql  20240914202544_example.up.sql
src/: component.rs  database.rs  event.rs  lib.rs  plugin.rs  tasks.rs
test/: postgres.sh  sqlite.sh
