[package]
name = "bevy_sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false, features = ["multi_threaded"] }
sqlx = { version = "*", features = ["runtime-async-std"] }

[dev-dependencies]
rand = "*"
bevy-inspector-egui = "*"

[[example]]
name = "minimal"
required-features = ["bevy/bevy_winit"]

[[example]]
name = "sqlite"
required-features = ["sqlx/sqlite", "bevy/bevy_winit"]

[[example]]
name = "postgres"
required-features = ["sqlx/postgres", "bevy/bevy_winit"]

[[example]]
name = "stress"
required-features = ["sqlx/sqlite", "bevy/bevy_winit"]
