[package]
name = "bevy_sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false, features = ["multi_threaded"] }
sqlx = { version = "*", features = ["runtime-async-std"] }

[dev-dependencies]
rand = "*"
bevy-inspector-egui = "*"

[[example]]
name = "sqlite-minimal"
path = "examples/sqlite/minimal.rs"
required-features = ["sqlx/sqlite", "bevy/bevy_winit"]

[[example]]
name = "sqlite-full"
path = "examples/sqlite/full.rs"
required-features = ["sqlx/sqlite", "bevy/bevy_winit"]

[[example]]
name = "sqlite-stress"
path = "examples/sqlite/stress.rs"
required-features = ["sqlx/sqlite"]

[[example]]
name = "postgres-minimal"
path = "examples/postgres/minimal.rs"
required-features = ["sqlx/postgres", "bevy/bevy_winit"]

