[package]
name = "bevy_sqlx"
version = "0.1.5"
edition = "2021"
description = "A SQLx database plugin for Bevy's ECS"
repository = "https://github.com/nixpulvis/bevy_sqlx"
license = "MIT"

[dependencies]
bevy = { version = "0", default-features = false, features = [
    "multi_threaded",
] }
sqlx = { version = "0", features = ["runtime-async-std"] }

[dev-dependencies]
rand = "0.8"
bevy-inspector-egui = "0.25"


# Examples

[[example]]
name = "sqlite-minimal"
path = "examples/sqlite/minimal.rs"
required-features = ["sqlx/sqlite", "bevy/bevy_winit"]

[[example]]
name = "sqlite-debug"
path = "examples/sqlite/debug.rs"
required-features = ["sqlx/sqlite", "bevy/bevy_winit"]

[[example]]
name = "sqlite-headless"
path = "examples/sqlite/headless.rs"
required-features = ["sqlx/sqlite"]

[[example]]
name = "sqlite-resource"
path = "examples/sqlite/resource.rs"
required-features = ["sqlx/sqlite"]

[[example]]
name = "postgres-minimal"
path = "examples/postgres/minimal.rs"
required-features = ["sqlx/postgres", "bevy/bevy_winit"]
